# hamarch

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
.github/worlflows/: main.yml
archiver/: CMakeLists.txt  archiver.cpp  archiver.h
archiver_io/: CMakeLists.txt  archive-reader.cpp  archive-reader.h  archive-writer.cpp  archive-writer.h
assets/: 1.txt
lib/: ArgParser.cpp  ArgumentInt.cpp  ArgumentInt.h  ArgumentString.cpp  CMakeLists.txt
src/: 2.txt
src/archiver/: archiver.h
src/archiver_io/: archive-reader.cpp
src/lib/: ArgParser.cpp  ArgParser.h  Argument.cpp  Argument.h  ArgumentFlag.cpp  ArgumentFlag.h  ArgumentInt.cpp  ArgumentString.cpp  ArgumentString.h
tests/: CMakeLists.txt  archiver_tests.cpp
